@@ -32,6 +32,7 @@ Coming in build 309, as yet unreleased
 * Improved handling of dict iterations and fallbacks (removes Python 2 support code, small general speed improvement) (#2332, #2330, @Avasam)
 * Fixed "Open GL Demo" (`Pythonwin/pywin/Demos/openGLDemo.py`) and restore "Font" demo in `Pythonwin/pywin/Demos/guidemo.py` (#2345, @Avasam)
 * Fixed accidentally trying to raise an undefined name instead of an `Exception` in `Pythonwin/pywin/debugger/debugger.py` (#2326, @Avasam)
+* Fixed PythonService DoLogMessage raising fatal GIL lock error (#2426, JacobNolan1)
 
 Build 308, released 2024-10-12
 ------------------------------
